<resources>
    <string name="app_name">migme</string>
    <string name="title_activity_main">migme</string>
    <string name="action_back">Back</string>
    <string name="action_friends">Friends</string>
    <string name="action_miniblog">Miniblog</string>
    <string name="action_migalerts">MigAlerts</string>
    <string name="action_games">Games</string>
    <string name="action_groups">Groups</string>
    <string name="action_chatroom">Chatrooms</string>
    <string name="action_store">Store</string>
    <string name="action_leaderboards">Leaderboards</string>
    <string name="action_migworld">migWorld</string>
    <string name="action_settings">Settings</string>
    <string name="action_merchants">Merchants</string>
    <string name="action_logout">Logout</string>
    <string name="icon_label">Icon</string>
    <string name="facebook_app_id">161865877194414</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_duration">0:00</string>
    <string name="empty"></string>
    <string name="action_bar_cd_overflow_marker">overflow_marker</string>
    <string name="action_bar_search_cd_search_box_button">search_box_button</string>
    <string name="action_bar_search_cd_search_box">search_box</string>
    <string name="action_button_cd_button_icon">button_icon</string>
    <string name="action_bar_chat_cd_group_chat_icon">group_chat_icon</string>
    <string name="action_bar_default_cd_ab_title_icon">ab_title_icon</string>
    <string name="action_bar_spp_cd_ad_post_white">ad_post_white</string>
    <string name="activity_popup_cd_close_button">close_button</string>
    <string name="all_access_button_cd_main_button">main_button</string>
    <string name="blank_layout_cd_category_icon">category_icon</string>
    <string name="bottom_menu_bar_cd_icon_1">icon_1</string>
    <string name="bottom_menu_bar_cd_icon_2">icon_2</string>
    <string name="bottom_menu_bar_cd_icon_3">icon_3</string>
    <string name="chat_message_common_incoming_cd_message_avatar">message_avatar</string>
    <string name="chat_message_common_outgoing_cd_message_avatar">message_avatar</string>
    <string name="chat_message_gift_incoming_cd_message_avatar">message_avatar</string>
    <string name="chat_message_gift_outgoing_cd_message_avatar">message_avatar</string>
    <string name="chat_msg_timestamp_container_cd_msg_tick">msg_tick</string>
    <string name="chatroom_category_cd_category_icon">category_icon</string>
    <string name="connection_settings_menu_cd_env_prod">env_prod</string>
    <string name="connection_settings_menu_cd_env_staging">env_staging</string>
    <string name="connection_settings_menu_cd_env_qalab">env_qalab</string>
    <string name="connection_settings_menu_cd_env_miab">env_miab</string>
    <string name="connection_settings_menu_cd_env_custom">env_custom</string>
    <string name="connection_settings_menu_cd_env_custom_host">env_custom_host</string>
    <string name="connection_settings_menu_cd_env_port">env_port</string>
    <string name="connection_settings_menu_cd_env_use_proxy">env_use_proxy</string>
    <string name="connection_settings_menu_cd_env_proxy_host">env_proxy_host</string>
    <string name="connection_settings_menu_cd_env_proxy_port">env_proxy_port</string>
    <string name="content_view_gift_cd_gift_shower_banner">gift_shower_banner</string>
    <string name="content_view_gift_cd_gift_image">gift_image</string>
    <string name="content_view_sticker_cd_content_view">content_view</string>
    <string name="dialog_alert_cd_close_button">close_button</string>
    <string name="dialog_store_search_cd_gift_name">gift_name</string>
    <string name="dialog_store_search_cd_from_price">from_price</string>
    <string name="dialog_store_search_cd_to_price">to_price</string>
    <string name="emotional_footprint_icon_cd_icon">icon</string>
    <string name="emotional_footprint_item_cd_avatar">avatar</string>
    <string name="emotional_footprint_item_cd_tag">tag</string>
    <string name="emotional_footprints_selection_cd_cancel">cancel</string>
    <string name="empty_view_loading_cd_loading_icon">loading_icon</string>
    <string name="foot_gift_list_cd_gift_category_spinner">gift_category_spinner</string>
    <string name="fragment_account_balance_cd_close_button">cd_close_button</string>
    <string name="fragment_attachment_paper_cd_gift_icon">gift_icon</string>
    <string name="fragment_badge_info_cd_close_button">close_button</string>
    <string name="fragment_badge_info_cd_badge_icon">badge_icon</string>
    <string name="fragment_browser_cd_webview">webview</string>
    <string name="fragment_browser_dialog_cd_webview">webview</string>
    <string name="fragment_browser_dialog_cd_btn_close">btn_close</string>
    <string name="fragment_captcha_cd_btn_close">btn_close</string>
    <string name="fragment_captcha_cd_captcha_textfield">captcha_textfield</string>
    <string name="fragment_captcha_cd_captcha_image">captcha_image</string>
    <string name="fragment_chat_cd_mentions_list_filter">mentions_list_filter</string>
    <string name="fragment_chat_list_cd_list">list</string>
    <string name="fragment_chat_manager_cd_chat_list_tab">chat_list_tab</string>
    <string name="fragment_chat_manager_cd_chatroom_tab">chatroom_tab</string>
    <string name="fragment_create_chatroom_cd_toggle_button">toggle_button</string>
    <string name="fragment_create_chatroom_cd_edit_description">edit_description</string>
    <string name="fragment_create_chatroom_cd_edit_room_name">edit_room_name</string>
    <string name="fragment_expandable_list_cd_list">list</string>
    <string name="fragment_friend_list_cd_friend_list">friend_list</string>
    <string name="fragment_full_profile_cd_full_body_avatar">full_body_avatar</string>
    <string name="fragment_full_profile_cd_edit_icon">edit_icon</string>
    <string name="fragment_gift_cd_gift_image">gift_image</string>
    <string name="fragment_gift_cd_label_premium">label_premium</string>
    <string name="fragment_gift_cd_message">message</string>
    <string name="fragment_gift_cd_checkbox_private_gift">checkbox_private_gift</string>
    <string name="fragment_gift_cd_checkbox_post_to_miniblog">checkbox_post_to_miniblog</string>
    <string name="fragment_gift_cd_friend_list_filter">friend_list_filter</string>
    <string name="fragment_gift_cd_friend_list">friend_list</string>
    <string name="fragment_gift_category_cd_gift_search">gift_search</string>
    <string name="fragment_gift_category_cd_gift_sort_by_spinner">sort_by_spinner</string>
    <string name="fragment_gift_category_cd_gift_sort_order_spinner">sort_order_spinner</string>
    <string name="fragment_gift_category_cd_gift_grid">gift_grid</string>
    <string name="fragment_gift_center_cd_store_button">store_button</string>
    <string name="fragment_gift_center_category_list_cd_gift_category_list">gift_category_list</string>
    <string name="fragment_gift_center_gift_category_cd_gift_grid">gift_grid</string>
    <string name="fragment_gift_list_cd_gift_filter_list">gift_filter_list</string>
    <string name="fragment_gift_preview_cd_gift_image">gift_image</string>
    <string name="fragment_gift_preview_cd_gift_class_icon">gift_class_icon</string>
    <string name="fragment_gift_preview_cd_gift_msg">gift_msg</string>
    <string name="fragment_gift_purchased_cd_gift_image">gift_image</string>
    <string name="fragment_gift_purchased_cd_recipient_grid">recipient_grid</string>
    <string name="fragment_gift_recipient_selection_cd_recipient_list">recipient_list</string>
    <string name="fragment_gift_sent_cd_close_button">close_button</string>
    <string name="fragment_gift_sent_cd_bot_celebrate">bot_celebrate</string>
    <string name="fragment_interstitial_banner_cd_interstitial_banner_title_image">banner_title_image</string>
    <string name="fragment_interstitial_banner_cd_btn_close_interstitial_banner">btn_close_interstitial_banner</string>
    <string name="fragment_login_form_cd_img_logo">img_logo</string>
    <string name="fragment_login_form_cd_txt_username">txt_username</string>
    <string name="fragment_login_form_cd_txt_password">txt_password</string>
    <string name="fragment_login_form_cd_img_forgotpassword">img_forgotpassword</string>
    <string name="fragment_login_form_cd_img_conn_settings">img_conn_settings</string>
    <string name="fragment_my_stickers_cd_my_sticker_list">my_sticker_list</string>
    <string name="fragment_photo_viewer_cd_webview">webview</string>
    <string name="fragment_photo_viewer_cd_img_close">img_close</string>
    <string name="fragment_photo_viewer_cd_img_save">img_save</string>
    <string name="fragment_photo_viewer_cd_img_share">img_share</string>
    <string name="fragment_photo_viewer_cd_img_options">img_options</string>
    <string name="fragment_positive_alert_cd_btn_close_positivealert">btn_close_positivealert</string>
    <string name="fragment_profile_chat_cd_cover_photo">cover_photo</string>
    <string name="fragment_profile_info_cd_list">list</string>
    <string name="fragment_profile_popup_cd_more_options_button">more_options_button</string>
    <string name="fragment_profile_popup_cd_overflow_marker">overflow_marker</string>
    <string name="fragment_request_follow_cd_icon_main">icon_main</string>
    <string name="fragment_selected_users_list_cd_selected_list">selected_list</string>
    <string name="fragment_sharebox_cd_emoticon_button">emoticon_button</string>
    <string name="fragment_sharebox_cd_photo_preview_and_button">photo_preview_and_button</string>
    <string name="fragment_sharebox_cd_close_button">close_button</string>
    <string name="fragment_sharebox_cd_attach_photo_button">attach_photo_button</string>
    <string name="fragment_sharebox_cd_twitter_button">twitter_button</string>
    <string name="menu_option_list_cd_icon">icon</string>
    <string name="menu_option_list_cd_action_icon_checked">action_icon_checked</string>
    <string name="menu_option_list_cd_action_icon_unselected">action_icon_unselected</string>
    <string name="menu_option_list_cd_action_icon_selected">action_icon_selected</string>
    <string name="privacy_context_menu_cd_visible_to_public">visible_to_public</string>
    <string name="privacy_context_menu_cd_visible_to_friends">visible_to_friends</string>
    <string name="privacy_context_menu_cd_visible_to_myself">visible_to_myself</string>
    <string name="privacy_context_menu_cd_allow_replies">allow_replies</string>
    <string name="navigation_drawer_footer_cd_banner_image">banner_image</string>
    <string name="navigation_drawer_footer_cd_menu_games">menu_games</string>
    <string name="navigation_drawer_footer_cd_menu_music">menu_music</string>
    <string name="navigation_drawer_footer_cd_menu_store">menu_store</string>
    <string name="navigation_drawer_footer_cd_menu_settings">menu_settings</string>
    <string name="user_mini_details_cd_menu_gift">menu_gift</string>
    <string name="user_mini_details_cd_menu_badges">menu_badges</string>
    <string name="user_mini_details_cd_menu_fans">menu_fans</string>
    <string name="fragment_games_detail_cd_favorite">favorite</string>
    <string name="fragment_games_detail_cd_sharing">sharing</string>
    <string name="fragment_games_detail_cd_invite">invite</string>
    <string name="fragment_games_detail_cd_thumbnail">thumbnail</string>
    <string name="fragment_games_detail_cd_button_play">button_play</string>
    <string name="fragment_games_detail_cd_game_detail_tab_info">game_detail_tab_info</string>
    <string name="fragment_games_detail_cd_game_detail_tab_rank">game_detail_tab_rank</string>
    <string name="fragment_games_detail_cd_game_detail_tab_rate">game_detail_tab_rate</string>
    <string name="fragment_games_detail_cd_game_detail_tab_friend">game_detail_tab_friend</string>
</resources>