<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">    
    
    <com.projectgoth.ui.widget.TouchImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />       
        
     <WebView
        android:id="@+id/webview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        android:contentDescription="@string/fragment_photo_viewer_cd_webview"
        android:layout_centerInParent="true" />
    
    <ProgressBar  
	    android:id="@+id/progressBar"
	    android:indeterminate="true" 
	    style="?android:attr/progressBarStyleLarge"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true" />
    
    <RelativeLayout
        android:id="@+id/top_controls_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/large_padding"
        android:background="@color/black_half_transparent">
	    <ImageView 
	        android:id="@+id/img_close"
	        android:layout_width="@dimen/icon_width_small"
	        android:layout_height="@dimen/icon_height_small"
	        android:src="@drawable/ic_close_white"
            android:contentDescription="@string/fragment_photo_viewer_cd_img_close"
	        android:layout_alignParentRight="true" />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/bottom_controls_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_padding"
        android:paddingBottom="@dimen/large_padding"
        android:background="@color/black_half_transparent"
        android:layout_alignParentBottom="true">
	    <ImageView
	        android:id="@+id/img_save"
	        style="@style/PhotoGridControls"
	        android:src="@drawable/ic_download"
            android:contentDescription="@string/fragment_photo_viewer_cd_img_save"
	        android:visibility="gone" />
	    <ImageView
            android:id="@+id/img_share"
            style="@style/PhotoGridControls"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/fragment_photo_viewer_cd_img_share"
            android:visibility="gone" />
	    <ImageView
            android:id="@+id/img_options"
            style="@style/PhotoGridControls"
            android:contentDescription="@string/fragment_photo_viewer_cd_img_options"
            android:src="@drawable/ic_more" />
    </LinearLayout>
</RelativeLayout>