<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical" >

    <com.projectgoth.ui.widget.UserMiniDetails
        android:id="@+id/user_mini_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/large_padding"
        android:paddingTop="@dimen/large_padding"
        android:visibility="visible" />

    <com.projectgoth.ui.widget.ImageViewEx
        android:id="@+id/banner_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/navigation_drawer_footer_cd_banner_image"
        android:background="@color/dark_green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/small_padding"
        android:paddingTop="@dimen/large_padding" >

        <TextView
            android:id="@+id/menu_games"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ad_playlarge_grey"
            android:contentDescription="@string/navigation_drawer_footer_cd_menu_games"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/menu_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/navigation_drawer_footer_cd_menu_music"
            android:drawableTop="@drawable/ad_music_grey" />
        
        <TextView
            android:id="@+id/menu_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/navigation_drawer_footer_cd_menu_store"
            android:drawableTop="@drawable/ad_storelarge_grey" />

        <TextView
            android:id="@+id/menu_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/navigation_drawer_footer_cd_menu_settings"
            android:drawableTop="@drawable/ad_settinglarge_grey" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" />

</LinearLayout>