<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:migme="http://schemas.android.com/apk/res/com.projectgoth"
              android:orientation="vertical"
              android:background="@color/gray_background"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        	android:id="@+id/game_banner_div"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

        <com.projectgoth.ui.widget.AutoScrollViewPager
                android:id="@+id/banner_view_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/game_banner_height"
                />
        <LinearLayout
                android:layout_width="@dimen/icon_width_normal"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:alpha="0.5"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical">
            <ImageView
                    android:id="@+id/favorite"
                    style="@style/game_detail_page_banner_icon"
                    android:contentDescription="@string/fragment_games_detail_cd_favorite"
                    android:src="@drawable/ad_favourite_white"/>
            <ImageView
                    android:id="@+id/sharing"
                    style="@style/game_detail_page_banner_icon"
                    android:contentDescription="@string/fragment_games_detail_cd_sharing"
                    android:src="@drawable/ad_sharing_white"/>
            <ImageView
                    android:id="@+id/invite"
                    style="@style/game_detail_page_banner_icon"
                    android:contentDescription="@string/fragment_games_detail_cd_invite"
                    android:src="@drawable/ad_inviteparty_white"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:padding="@dimen/normal_padding">
        <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="@dimen/game_thumbnail_width"
                android:layout_height="@dimen/game_thumbnail_height"
                android:background="@color/white"
                android:src="@drawable/game_icon"
                android:contentDescription="@string/fragment_games_detail_cd_thumbnail"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_play"
            android:layout_alignBottom="@+id/button_play"
            android:layout_toRightOf="@+id/thumbnail"
            android:gravity="center_horizontal"
            android:text="Long Game Name"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/dark_text_color"
            android:textSize="@dimen/text_size_xlarge" />
        
        <!-- <LinearLayout
                android:id="@+id/rating_wrapper"
                android:layout_width="@dimen/game_rating_wrapper_height"
                android:layout_height="@dimen/game_rating_wrapper_width"
                android:layout_below="@+id/game_title"
                android:layout_marginTop="@dimen/ssmall_margin"
                android:layout_toRightOf="@+id/thumbnail"
                android:orientation="horizontal"/> -->

        <com.projectgoth.ui.widget.TextButton
                android:id="@+id/button_play"
                android:layout_width="@dimen/game_play_button_width"
                android:layout_height="@dimen/game_play_button_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/fragment_games_detail_cd_button_play"
                style="@style/TextButton.Orange"
                migme:text="PLAY"/>


    </RelativeLayout>
    <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_marginTop="@dimen/xsmall_margin"
            android:paddingBottom="@dimen/normal_padding"
            android:paddingTop="@dimen/normal_padding">
        <ImageView
                android:id="@+id/game_detail_tab_info"
                style="@style/game_detail_page_tab_icon"
                android:contentDescription="@string/fragment_games_detail_cd_game_detail_tab_info"
                android:src="@drawable/game_detail_tab_info" />
        <ImageView
                android:id="@+id/game_detail_tab_rate"
                style="@style/game_detail_page_tab_icon"
                android:contentDescription="@string/fragment_games_detail_cd_game_detail_tab_rate"
                android:src="@drawable/game_detail_tab_rate" />
        <ImageView
                android:id="@+id/game_detail_tab_rank"
                style="@style/game_detail_page_tab_icon"
                android:contentDescription="@string/fragment_games_detail_cd_game_detail_tab_rank"
                android:src="@drawable/game_detail_tab_rank" />
        <ImageView
                android:id="@+id/game_detail_tab_friend"
                style="@style/game_detail_page_tab_icon"
                android:contentDescription="@string/fragment_games_detail_cd_game_detail_tab_friend"
                android:src="@drawable/game_detail_tab_friends" />
    </LinearLayout>


    <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginTop="@dimen/xsmall_margin"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin"
            
            />
</LinearLayout>