<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/list_menu_item_icon_width"
        android:layout_height="@dimen/list_menu_item_icon_height"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/normal_margin"
        android:padding="@dimen/small_padding"
        android:scaleType="fitXY"
        android:contentDescription="@string/menu_option_list_cd_icon"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_toRightOf="@+id/icon"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="normal"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/action_icon_checked"
        android:layout_width="@dimen/list_menu_item_icon_width"
        android:layout_height="@dimen/list_menu_item_icon_height"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/small_margin"
        android:contentDescription="@string/menu_option_list_cd_action_icon_checked"
        android:padding="@dimen/small_padding"
        android:scaleType="fitXY"
        android:src="@drawable/ad_tick_white"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/action_icon_unselected"
        android:layout_width="@dimen/list_menu_item_icon_width"
        android:layout_height="@dimen/list_menu_item_icon_height"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/small_margin"
        android:padding="@dimen/small_padding"
        android:scaleType="fitXY"
        android:src="@drawable/ad_select_white"
        android:contentDescription="@string/menu_option_list_cd_action_icon_unselected"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/action_icon_selected"
        android:layout_width="@dimen/list_menu_item_icon_width"
        android:layout_height="@dimen/list_menu_item_icon_height"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/small_margin"
        android:padding="@dimen/small_padding"
        android:scaleType="fitXY"
        android:src="@drawable/ad_selected_white"
        android:contentDescription="@string/menu_option_list_cd_action_icon_selected"
        android:visibility="gone" />

</RelativeLayout>